# codeclaw

./: .gitignore  AGENTS.md  pyproject.toml  streamlit_app.py
codeclaw/: __main__.py  agent.py  approvals.py  cli.py  config.py  doctor.py  gateway.py  gateway_client.py  storage.py  telegram.py  tools.py  ui.py
docs/: administrator-manual.md  codeclaw.example.toml  deployment.md  engineering-design.md  openclaw.example.toml  troubleshooting.md  user-manual.md
openclaw/: __main__.py  agent.py  cli.py  config.py  doctor.py  gateway.py  gateway_client.py  storage.py  telegram.py  tools.py  ui.py
pages/: 1_Chat.py  2_Configuration.py  3_Logs_and_Processing.py
tests/: test_agent.py  test_config.py  test_gateway.py  test_storage.py  test_telegram.py  test_tools.py  test_ui.py
